using jsonapi from core instead of module

--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -5,7 +5,7 @@ package: Varbase
 description: 'Varbase API'
 configure: varbase_api.settings
 dependencies:
-  - jsonapi:jsonapi
+  - drupal:jsonapi
   - openapi:openapi
   - openapi_ui_redoc:openapi_ui_redoc
   - openapi_ui_swagger:openapi_ui_swagger
