Add jsonapi_extras module to Varbase API, Add REST UI module to Varbase API, , Change default path of API to be , Patch https://www.drupal.org/project/openapi_ui/issues/3051604 to remove disabled resourced from API documentation, Disabling resourced (config entity), Make json_api_extras install, Make restui install

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "drupal/openapi_ui_redoc": "^1.0",
         "drupal/openapi_ui_swagger": "^1.0",
         "drupal/simple_oauth": "^3.8.0",
-        "drupal/schema_metatag": "^1.3"
+        "drupal/schema_metatag": "^1.3",
+        "drupal/restui": "^1.17",
+        "drupal/jsonapi_extras": "^3.6"
     },
     "extra": {
       "branch-alias": {
@@ -41,7 +43,13 @@
       "installer-types": [
         "bower-asset",
         "npm-asset"
-      ]
+      ],
+      "patches": {
+        "drupal/openapi": {
+          "Issue #2982692: Not respecting disabled JSON API resources":
+          "https://www.drupal.org/files/issues/2019-05-18/openapi-respect_jsonapi_resources-2982692-10.patch"
+        }
+      }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
