--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -9,4 +9,8 @@ dependencies:
   - openapi:openapi
   - openapi_ui_redoc:openapi_ui_redoc
   - openapi_ui_swagger:openapi_ui_swagger
+  - simple_oauth:simple_oauth
   - simple_oauth:simple_oauth_extras
+install:
+  - restui
+  - jsonapi_extras
