--- a/composer.json
+++ b/composer.json
@@ -1,56 +1,61 @@
 {
-    "name": "drupal/varbase_api",
-    "type": "drupal-module",
-    "description": "A JSON:API implementation with authentication and authorization that allows for easy ingestion of content by other applications.",
-    "license": "GPL-2.0-or-later",
-    "authors": [
-      {
-        "name": "Vardot",
-        "homepage": "https://www.drupal.org/vardot",
-        "role": "Maintainer"
-      }
-    ],
-    "support": {
-      "issues": "https://www.drupal.org/project/issues/varbase_api",
-      "source": "http://cgit.drupalcode.org/varbase_api"
-    },
-    "repositories": {
-      "drupal": {
-        "type": "composer",
-        "url": "https://packages.drupal.org/8"
-        },
-      "assets": {
-        "type": "composer",
-        "url": "https://asset-packagist.org"
-      }
-    },
-    "require": {
-        "cweagans/composer-patches": "^1.6.4",
-        "drupal-composer/drupal-scaffold": "^2.0.0",
-        "drupal/consumers": "^1.9",
-        "drupal/openapi": "^1.0-beta2",
-        "drupal/openapi_ui_redoc": "^1.0",
-        "drupal/openapi_ui_swagger": "^1.0",
-        "drupal/simple_oauth": "^3.8.0",
-        "drupal/schema_metatag": "^1.3",
-        "drupal/restui": "^1.17",
-        "drupal/jsonapi_extras": "^3.6"
-    },
-    "extra": {
-      "branch-alias": {
-        "dev-8.x-6.x": "8.6.x-dev"
+  "name": "drupal/varbase_api",
+  "type": "drupal-module",
+  "description": "A JSON:API implementation with authentication and authorization that allows for easy ingestion of content by other applications.",
+  "license": "GPL-2.0-or-later",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "authors": [
+    {
+      "name": "Vardot",
+      "homepage": "https://www.drupal.org/vardot",
+      "role": "Maintainer"
+    }
+  ],
+  "support": {
+    "issues": "https://www.drupal.org/project/issues/varbase_api",
+    "source": "http://cgit.drupalcode.org/varbase_api"
+  },
+  "repositories": {
+    "drupal": {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
       },
-      "installer-types": [
-        "bower-asset",
-        "npm-asset"
-      ],
-      "patches": {
-        "drupal/openapi": {
-          "Issue #2982692: Not respecting disabled JSON API resources":
-          "https://www.drupal.org/files/issues/2019-05-18/openapi-respect_jsonapi_resources-2982692-10.patch"
-        }
-      }
+    "assets": {
+      "type": "composer",
+      "url": "https://asset-packagist.org"
+    }
+  },
+  "require": {
+    "composer/installers": "~1.0",
+    "oomphinc/composer-installers-extender": "~1.0",
+    "cweagans/composer-patches": "~1.0",
+    "drupal/drupal-library-installer-plugin": "^0.3",
+    "drupal/consumers": "~1.0",
+    "drupal/jsonapi": "~2.0",
+    "drupal/openapi": "1.0-beta2",
+    "drupal/openapi_ui_redoc": "~1.0",
+    "drupal/openapi_ui_swagger": "~1.0",
+    "drupal/simple_oauth": "~3.0",
+    "drupal/schema_metatag": "~1.0",
+    "drupal/restui": "~1.0",
+    "drupal/jsonapi_extras": "~3.0"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-8.x-6.x": "8.6.x-dev"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "installer-types": [
+      "bower-asset",
+      "npm-asset"
+    ],
+    "enable-patching": true,
+    "composer-exit-on-patch-failure": true,
+    "patches": {
+      "drupal/openapi": {
+        "Issue #2982692: Not respecting disabled JSON API resources":
+        "https://www.drupal.org/files/issues/2019-05-18/openapi-respect_jsonapi_resources-2982692-10.patch"
+      }
+    }
+  }
 }
