--- a/composer.json
+++ b/composer.json
@@ -27,25 +27,29 @@
     }
   },
   "require": {
-    "cweagans/composer-patches": "^1.6.4",
-    "drupal-composer/drupal-scaffold": "^2.0.0",
-    "drupal/consumers": "^1.9",
-    "drupal/openapi": "^1.0-beta2",
-    "drupal/openapi_ui_redoc": "^1.0",
-    "drupal/openapi_ui_swagger": "^1.0",
-    "drupal/simple_oauth": "^3.8.0",
-    "drupal/schema_metatag": "^1.3",
-    "drupal/restui": "^1.17",
-    "drupal/jsonapi_extras": "^3.6"
+    "composer/installers": "~1.0",
+    "oomphinc/composer-installers-extender": "~1.0",
+    "cweagans/composer-patches": "~1.0",
+    "drupal/drupal-library-installer-plugin": "^0.3",
+    "drupal/consumers": "~1.0",
+    "drupal/openapi": "1.0-beta2",
+    "drupal/openapi_ui_redoc": "~1.0",
+    "drupal/openapi_ui_swagger": "~1.0",
+    "drupal/simple_oauth": "~3.0",
+    "drupal/schema_metatag": "~1.0",
+    "drupal/restui": "~1.0",
+    "drupal/jsonapi_extras": "~3.0"
   },
   "extra": {
     "branch-alias": {
-      "dev-8.x-6.x": "8.6.x-dev"
+      "dev-8.x-7.x": "8.7.x-dev"
     },
     "installer-types": [
       "bower-asset",
       "npm-asset"
     ],
+    "enable-patching": true,
+    "composer-exit-on-patch-failure": true,
     "patches": {
       "drupal/openapi": {
         "Issue #2982692: Not respecting disabled JSON API resources":
