--- a/varbase_api.routing.yml
+++ b/varbase_api.routing.yml
@@ -1,7 +1,7 @@
 varbase_api.settings:
   path: '/admin/config/system/varbase/api'
   defaults:
-    _title: API
+    _title: 'Varbase API settings'
     _form: '\Drupal\varbase_api\Form\SettingsForm'
   requirements:
     _permission: 'administer varbase api settings'
@@ -9,7 +9,7 @@ varbase_api.settings:
 varbase_api.generate_keys:
   path: '/admin/config/system/varbase/api/keys'
   defaults:
-    _title: Generate keys
+    _title: 'Generate keys'
     _form: '\Drupal\varbase_api\Form\OAuthKeyForm'
   requirements:
     _permission: 'administer varbase api settings'
