--- a/varbase_api.routing.yml
+++ b/varbase_api.routing.yml
@@ -1,7 +1,7 @@
 varbase_api.settings:
   path: '/admin/config/system/varbase/api'
   defaults:
-    _title: 'Varbase API'
+    _title: 'Varbase API settings'
     _form: '\Drupal\varbase_api\Form\SettingsForm'
   requirements:
     _permission: 'administer varbase api settings'
