Issue #3057182: Optimization round No.1 for the 8.x-6.x branch and the structure with Drupal standards

--- a/varbase_api.links.task.yml
+++ b/varbase_api.links.task.yml
@@ -1,6 +1,6 @@
 varbase_api.settings:
   route_name: varbase_api.settings
-  title: 'Settings'
+  title: 'Varbase API settings'
   base_route: varbase_api.settings
 
 varbase_api.generate_keys:
