--- a/varbase_api.links.menu.yml
+++ b/varbase_api.links.menu.yml
@@ -1,5 +1,5 @@
 varbase_api.settings:
   route_name: varbase_api.settings
-  title: 'API'
+  title: 'Varbase API settings'
   description: 'Configure Varbase API settings.'
   parent: varbase_core.settings_index
