--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,8 @@
     "composer-exit-on-patch-failure": true,
     "patches": {
       "drupal/openapi": {
-        "Issue #2982692: Fix issue of respecting disabled JSON:API resources by JSON:API Extras":
-        "https://www.drupal.org/files/issues/2019-06-24/2982692-11.patch"
+        "Issue #2982692: Fix issue of NOT respecting disabled JSON:API resources by JSON:API Extras":
+        "https://www.drupal.org/files/issues/2019-06-24/openapi--8-x-1-0-beta3--2982692-14-no-test.patch"
       }
     }
   }
