--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "drupal/simple_oauth": "~3.0",
     "drupal/schema_metatag": "~1.0",
     "drupal/restui": "~1.0",
-    "drupal/jsonapi_extras": "~3.0"
+    "drupal/jsonapi_extras": "~3.0",
+    "swagger-api/swagger-ui": "~3.0"
   },
   "extra": {
     "branch-alias": {
@@ -48,6 +49,11 @@
       "bower-asset",
       "npm-asset"
     ],
+    "drupal-libraries": {
+      "libraries": [
+        {"name": "swagger-ui", "package": "swagger-api/swagger-ui"}
+      ]
+    },
     "enable-patching": true,
     "composer-exit-on-patch-failure": true,
     "patches": {
