Issue #3067834: Fix [Varbase API] uses of deprecated Drupal core APIs  and standard Drupal Practice

--- a/varbase_api.services.yml
+++ b/varbase_api.services.yml
@@ -11,5 +11,6 @@ services:
       - '@current_route_match'
       - '@varbase_api.oauth_key'
       - '@string_translation'
+      - '@messenger'
     tags:
       - { name: event_subscriber }
