--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "drupal/simple_oauth": "~4.0",
     "drupal/schema_metatag": "~1.0",
     "drupal/restui": "~1.0",
-    "drupal/jsonapi_extras": "3.12",
+    "drupal/jsonapi_extras": "~3.0",
     "swagger-api/swagger-ui": "~3.0"
   },
   "extra": {
@@ -55,12 +55,6 @@
       ]
     },
     "enable-patching": true,
-    "composer-exit-on-patch-failure": true,
-    "patches": {
-      "drupal/jsonapi_extras": {
-        "Issue #3089444: Compatibility with Drupal 8.8.x":
-        "https://www.drupal.org/files/issues/2019-11-19/3089444-21.patch"
-      }
-    }
+    "composer-exit-on-patch-failure": true
   }
 }
