--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -6,6 +6,7 @@ version: 8.x-7.x-dev
 core: 8.x
 project: varbase_api
 configure: varbase_api.settings
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:jsonapi
   - openapi:openapi
