Issue #3128353: Move asset libraries in [Varbase API] from require to suggest

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "name": "drupal/varbase_api",
-  "type": "drupal-module",
   "description": "A JSON:API implementation with authentication and authorization that allows for easy ingestion of content by other applications.",
+  "type": "drupal-module",
+  "homepage": "https://www.drupal.org/project/varbase_editor",
+  "notification-url": "https://packages.drupal.org/8/downloads",
   "license": "GPL-2.0-or-later",
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -39,8 +41,10 @@
     "drupal/simple_oauth": "~4.0",
     "drupal/schema_metatag": "~1.0",
     "drupal/restui": "~1.0",
-    "drupal/jsonapi_extras": "~3.0",
-    "swagger-api/swagger-ui": "~3.0"
+    "drupal/jsonapi_extras": "~3.0"
+  },
+  "suggest": {
+    "swagger-api/swagger-ui": "~3.0: Provides the Swagger UI library which is a collection of HTML, Javascript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API."
   },
   "extra": {
     "branch-alias": {
@@ -54,6 +58,8 @@
       "libraries": [
         {"name": "swagger-ui", "package": "swagger-api/swagger-ui"}
       ]
-    }
+    },
+    "enable-patching": true,
+    "composer-exit-on-patch-failure": true
   }
 }
