Issue #3128214: Add Automated Testing for the [Varbase API] module

--- a/drupalci.yml
+++ b/drupalci.yml
@@ -6,10 +6,7 @@ build:
       eslint:
       phpcs:
     testing:
-      run_tests.standard:
-        types: 'Simpletest,PHPUnit-Unit,PHPUnit-Kernel,PHPUnit-Functional'
-        suppress-deprecations: false
-      run_tests.js:
-        concurrency: 1
-        types: 'PHPUnit-FunctionalJavascript'
-        suppress-deprecations: false
+      run_tests.functional:
+        types: 'PHPUnit-Functional'
+        testgroups: 'varbase_api'
+        suppress-deprecations: true
