--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "oomphinc/composer-installers-extender": "~1.0",
     "cweagans/composer-patches": "~1.0",
     "drupal/drupal-library-installer-plugin": "^0.3",
-    "drupal/core": "^8.8.0 || ~9.0.0",
+    "drupal/core": "^8.8 || ^9 || ~10.0.0",
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
     "drupal/openapi_ui_redoc": "~1.0",
