Issue #3151784: Add [OpenAPI for REST] module ( ~2.0 ) after OpenAPI had been updated to ~2.0

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
     "drupal/openapi_jsonapi": "~2.0",
+    "drupal/openapi_rest": "~2.0",
     "drupal/openapi_ui_redoc": "~1.0",
     "drupal/openapi_ui_swagger": "~1.0",
     "drupal/simple_oauth": "~4.0",
