--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - drupal:jsonapi
   - openapi:openapi
   - openapi_jsonapi:openapi_jsonapi
+  - openapi_rest:openapi_rest
   - openapi_ui_redoc:openapi_ui_redoc
   - openapi_ui_swagger:openapi_ui_swagger
   - simple_oauth:simple_oauth
