--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "oomphinc/composer-installers-extender": "~1.0",
     "cweagans/composer-patches": "~1.0",
     "drupal/drupal-library-installer-plugin": "^0.3",
-    "drupal/core": "^8.8 || ^9 || ~10.0.0",
+    "drupal/core": "^9 || ~10.0.0",
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
     "drupal/openapi_jsonapi": "~2.0",
@@ -49,9 +49,6 @@
     "swagger-api/swagger-ui": "~3.0: Provides the Swagger UI library which is a collection of HTML, Javascript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API."
   },
   "extra": {
-    "branch-alias": {
-      "dev-8.x-7.x": "8.7.x-dev"
-    },
     "installer-types": [
       "bower-asset",
       "npm-asset"
