--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -3,7 +3,7 @@ description: 'A JSON:API implementation with authentication and authorization th
 type: module
 package: Varbase
 configure: varbase_api.settings
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
 dependencies:
   - drupal:jsonapi
   - openapi:openapi
