--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,9 @@
     }
   },
   "require": {
-    "composer/installers": "~1.0",
-    "oomphinc/composer-installers-extender": "~1.0",
+    "composer/installers": "~1.0 || ~2.0",
+    "oomphinc/composer-installers-extender": "~1.0 || ~2.0",
     "cweagans/composer-patches": "~1.0",
-    "drupal/drupal-library-installer-plugin": "^0.3",
     "drupal/core": "^8.8 || ^9 || ~10.0.0",
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
