Issue #3230881: Add lint:yaml and update the package.json for Varbase API module with latest Drupal 9.3.x dev tools

--- a/varbase_api.info.yml
+++ b/varbase_api.info.yml
@@ -1,5 +1,5 @@
-name: 'Varbase API'
-description: 'A JSON:API implementation with authentication and authorization that allows for easy ingestion of content by other applications.'
+name: "Varbase API"
+description: "A JSON:API implementation with authentication and authorization that allows for easy ingestion of content by other applications."
 type: module
 package: Varbase
 configure: varbase_api.settings
