--- a/drupalci.yml
+++ b/drupalci.yml
@@ -1,12 +1,7 @@
 build:
   assessment:
-    validate_codebase:
-      phplint:
-      csslint:
-      eslint:
-      phpcs:
     testing:
       run_tests.functional:
-        types: 'PHPUnit-Functional'
-        testgroups: 'varbase_api'
+        types: "PHPUnit-Functional"
+        testgroups: "varbase_api"
         suppress-deprecations: true
