--- a/varbase_api.services.yml
+++ b/varbase_api.services.yml
@@ -2,15 +2,15 @@ services:
   varbase_api.oauth_key:
     class: '\Drupal\varbase_api\OAuthKey'
     arguments:
-      - '@config.factory'
-      - '@file_system'
+      - "@config.factory"
+      - "@file_system"
 
   varbase_api.request_subscriber:
     class: '\Drupal\varbase_api\RequestSubscriber'
     arguments:
-      - '@current_route_match'
-      - '@varbase_api.oauth_key'
-      - '@string_translation'
-      - '@messenger'
+      - "@current_route_match"
+      - "@varbase_api.oauth_key"
+      - "@string_translation"
+      - "@messenger"
     tags:
       - { name: event_subscriber }
