Issue #3170679: Change JSON:API Resource overrides to disable all by default for any entity config in JSON API. Only Enable for entity content Content Types, Media, and Taxonomy

--- a/varbase_api.routing.yml
+++ b/varbase_api.routing.yml
@@ -2,7 +2,7 @@ varbase_api.settings:
   path: "/admin/config/system/varbase/api"
   defaults:
     _title: "Varbase API settings"
-    _form: '\Drupal\varbase_api\Form\SettingsForm'
+    _form: '\Drupal\varbase_api\Form\VarbaseApiSettingsForm'
   requirements:
     _permission: "administer varbase api settings"
 
