--- a/varbase_api.services.yml
+++ b/varbase_api.services.yml
@@ -1,16 +1,15 @@
 services:
   varbase_api.oauth_key:
     class: '\Drupal\varbase_api\OAuthKey'
-    arguments:
-      - "@config.factory"
-      - "@file_system"
-
+    arguments: ["@config.factory", "@file_system"]
   varbase_api.request_subscriber:
-    class: '\Drupal\varbase_api\RequestSubscriber'
+    class: '\Drupal\varbase_api\EventSubscriber\VarbaseApiRequestSubscriber'
     arguments:
-      - "@current_route_match"
-      - "@varbase_api.oauth_key"
-      - "@string_translation"
-      - "@messenger"
+      [
+        "@current_route_match",
+        "@varbase_api.oauth_key",
+        "@string_translation",
+        "@messenger"
+      ]
     tags:
       - { name: event_subscriber }
