--- a/drupalci.yml
+++ b/drupalci.yml
@@ -1,7 +1,18 @@
 build:
   assessment:
+    validate_codebase:
+      phplint:
+        halt-on-fail: false
+      csslint:
+        halt-on-fail: false
+      eslint:
+        halt-on-fail: false
+      phpcs:
+        sniff-all-files: false
+        halt-on-fail: false
     testing:
       run_tests.functional:
         types: "PHPUnit-Functional"
         testgroups: "varbase_api"
         suppress-deprecations: true
+        halt-on-fail: false
