--- a/drupalci.yml
+++ b/drupalci.yml
@@ -32,8 +32,8 @@ build:
           - composer config --json extra.installer-paths.web\/libraries\/swagger-ui\/dist '["npm-asset/swagger-ui-dist"]'
           - rm composer.lock
           - composer require npm-asset/swagger-ui-dist:~3.0
-          - composer require phpunit/phpunit:~8.0
-          - composer require drupal/core-dev:~9.0
+          - composer require --dev phpspec/prophecy-phpunit:*
+          - composer require phpunit/phpunit:~9.0 --with-all-dependencies
       run_tests.javascript:
         concurrency: 15
         types: 'PHPUnit-FunctionalJavascript'
