--- a/varbase_api.permissions.yml
+++ b/varbase_api.permissions.yml
@@ -1,2 +1,6 @@
 administer varbase api settings:
   title: "Administer Varbase API settings"
+  description: 'Access Varbase API settings and genrate keys page.'
+access view json entity operation:
+  title: 'Access View JSON entity operation'
+  description: 'Access the View JSON entity operation'
