Issue #3232612: Switch Varbase API  to use Entity Definition Update Manager class from vardot/entity-definition-update-manager class library

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "oomphinc/composer-installers-extender": "~1.0 || ~2.0",
     "cweagans/composer-patches": "~1.0",
     "drupal/core": "~9.0",
+    "vardot/entity-definition-update-manager": "~1.0",
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
     "drupal/openapi_jsonapi": "3.0.1",
