--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "vardot/entity-definition-update-manager": "~1.0",
     "drupal/consumers": "~1.0",
     "drupal/openapi": "~2.0",
-    "drupal/openapi_jsonapi": "3.0.1",
+    "drupal/openapi_jsonapi": "3.0.2",
     "drupal/openapi_rest": "~2.0",
     "drupal/openapi_ui_redoc": "~1.0",
     "drupal/openapi_ui_swagger": "~1.0",
@@ -65,7 +65,7 @@
     },
     "patches": {
       "drupal/openapi_jsonapi": {
-        "Fix TypeError: Cannot read property 'anyOf' of undefined":
+        "Issue #3185778: Fix TypeError: Cannot read property 'anyOf' of undefined":
         "https://www.drupal.org/files/issues/2020-12-21/add_required_keyword_8.x_2.x-3185778-5.patch",
         "Issue #3079209: Hide POST, PUT, and DELETE endpoints when JSON:API is configured to be read-only":
         "https://www.drupal.org/files/issues/2020-12-21/only_add_read_route-methods_when_read_only_is_enabled_in_jsonapi_8.x_2.x-3079209-11.patch"
