Issue #3391678: Update the Swagger UI for OpenAPI UI module from 1.x-dev to ~1.0 stable release with full support for Drupal ~10.1.0

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     "drupal/openapi_jsonapi": "3.0.4",
     "drupal/openapi_rest": "~2.0",
     "drupal/openapi_ui_redoc": "~1.0",
-    "drupal/openapi_ui_swagger": "1.x-dev",
+    "drupal/openapi_ui_swagger": "~1.0",
     "drupal/simple_oauth": "~6.0",
     "drupal/schema_metatag": "~3.0.0",
     "drupal/restui": "~1.0",
