--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "drupal/openapi_ui_redoc": "~1.0",
     "drupal/openapi_ui_swagger": "~1.0",
     "drupal/simple_oauth": "~5.0",
-    "drupal/schema_metatag": "~2.0",
+    "drupal/schema_metatag": "~2.0 || ~3.0.0",
     "drupal/restui": "~1.0",
     "drupal/jsonapi_extras": "~3.0"
   },
